--- a/lang/bn.json
+++ b/lang/bn.json
@@ -234,6 +234,7 @@
   "Bird": "পাখি",
   "Birthdate": "জন্ম তারিখ",
   "Birthday": "জন্মদিন",
+  "Bluesky": "ব্লুস্কি",
   "Body": "শরীর",
   "boss": "বস",
   "Bought": "কিনলেন",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "উপহারের অনুষ্ঠানগুলি আপনাকে আপনার সমস্ত উপহারকে শ্রেণিবদ্ধ করতে দেয়।",
   "Gift states": "উপহার রাষ্ট্র",
   "Gift states let you define the various states for your gifts.": "উপহারের রাজ্যগুলি আপনাকে আপনার উপহারের জন্য বিভিন্ন রাজ্যকে সংজ্ঞায়িত করতে দেয়।",
+  "GitHub": "গিথুব",
   "Give this email address a name": "এই ইমেল ঠিকানা একটি নাম দিন",
   "Goals": "গোল",
   "Go back": "ফিরে যাও",
@@ -601,6 +603,7 @@
   "in love with": "প্রেমে",
   "Inspirational post": "অনুপ্রেরণামূলক পোস্ট",
   "Instagram": "ইনস্টাগ্রাম",
+  "Instant messaging": "তাত্ক্ষণিক বার্তা",
   "Insufficient Storage": "অপর্যাপ্ত মজুত",
   "Internal Server Error": "অভ্যন্তরীণ সার্ভার ত্রুটি",
   "Introduction": "ভূমিকা",
@@ -835,6 +838,7 @@
   "Pet category": "পোষ্য বিভাগ",
   "Pets": "পোষা প্রাণী",
   "Phone": "ফোন",
+  "Phone number": "ফোন নম্বর",
   "Photo": "ছবি",
   "Photos": "ফটো",
   "Played basketball": "বাস্কেটবল খেলতেন",
@@ -1018,6 +1022,7 @@
   "Slices of life": "জীবনের টুকরো টুকরো",
   "Small animal": "ছোট প্রাণী",
   "Social": "সামাজিক",
+  "Social profile": "সামাজিক প্রোফাইল",
   "Solve": "সমাধান",
   "Some dates have a special type that we will use in the software to calculate an age.": "কিছু তারিখের একটি বিশেষ প্রকার আছে যা আমরা একটি বয়স গণনা করতে সফ্টওয়্যারে ব্যবহার করব।",
   "So… it works 😼": "তাই… এটা কাজ করে 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "এই ব্যবহারকারী ইতিমধ্যে দলের আমন্ত্রণ জানানো হয়েছে ৷",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "এই ব্যবহারকারী আপনার অ্যাকাউন্টের অংশ হবে, কিন্তু আপনি তাদের নির্দিষ্ট অ্যাক্সেস না দেওয়া পর্যন্ত এই অ্যাকাউন্টের সমস্ত ভল্টে অ্যাক্সেস পাবেন না। এই ব্যক্তি পাশাপাশি vaults তৈরি করতে সক্ষম হবে.",
   "This will immediately:": "এটি অবিলম্বে হবে:",
+  "Threads": "থ্রেড",
   "Three things that happened today": "আজ যে তিনটি ঘটনা ঘটেছে",
   "Thursday": "বৃহস্পতিবার",
   "Timezone": "সময় অঞ্চল",
