--- a/lang/ca.json
+++ b/lang/ca.json
@@ -234,6 +234,7 @@
   "Bird": "Ocell",
   "Birthdate": "Data de naixement",
   "Birthday": "Aniversari",
+  "Bluesky": "Bluesky",
   "Body": "Cos",
   "boss": "cap",
   "Bought": "Comprat",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Les ocasions de regal et permeten classificar tots els teus regals.",
   "Gift states": "Estats de regal",
   "Gift states let you define the various states for your gifts.": "Els estats de regal us permeten definir els diferents estats dels vostres regals.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Doneu un nom a aquesta adreça de correu electrònic",
   "Goals": "Metes",
   "Go back": "Torna",
@@ -601,6 +603,7 @@
   "in love with": "Enamorat de",
   "Inspirational post": "Post inspirador",
   "Instagram": "Instagram",
+  "Instant messaging": "Missatgeria instantània",
   "Insufficient Storage": "Emmagatzematge insuficient",
   "Internal Server Error": "error del servidor intern",
   "Introduction": "Introducció",
@@ -835,6 +838,7 @@
   "Pet category": "Categoria de mascota",
   "Pets": "Animals de companyia",
   "Phone": "Telèfon",
+  "Phone number": "Número de telèfon",
   "Photo": "Foto",
   "Photos": "Fotografies",
   "Played basketball": "Jugava a bàsquet",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Trossets de vida",
   "Small animal": "Animal petit",
   "Social": "Social",
+  "Social profile": "Perfil social",
   "Solve": "Resol",
   "Some dates have a special type that we will use in the software to calculate an age.": "Algunes dates tenen un tipus especial que utilitzarem al programari per calcular una edat.",
   "So… it works 😼": "Així que... funciona 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Aquest usuari ja ha estat convidat a l’equip.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Aquest usuari formarà part del vostre compte, però no tindrà accés a totes les voltes d’aquest compte tret que hi doneu accés específic. Aquesta persona també podrà crear voltes.",
   "This will immediately:": "Això immediatament:",
+  "Threads": "Fils",
   "Three things that happened today": "Tres coses que han passat avui",
   "Thursday": "dijous",
   "Timezone": "Fus horari",
