--- a/lang/el.json
+++ b/lang/el.json
@@ -234,6 +234,7 @@
   "Bird": "Πουλί",
   "Birthdate": "Ημερομηνία γέννησης",
   "Birthday": "Γενέθλια",
+  "Bluesky": "Μπλε",
   "Body": "Σώμα",
   "boss": "αφεντικό",
   "Bought": "Αγορασμένος",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Οι περιπτώσεις δώρων σάς επιτρέπουν να ταξινομήσετε όλα τα δώρα σας.",
   "Gift states": "Δώρο καταστάσεις",
   "Gift states let you define the various states for your gifts.": "Οι καταστάσεις δώρων σάς επιτρέπουν να ορίσετε τις διάφορες καταστάσεις για τα δώρα σας.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Δώστε σε αυτήν τη διεύθυνση email ένα όνομα",
   "Goals": "Στόχοι",
   "Go back": "Πήγαινε πίσω",
@@ -601,6 +603,7 @@
   "in love with": "ερωτευμένος με",
   "Inspirational post": "Εμπνευσμένη ανάρτηση",
   "Instagram": "Instagram",
+  "Instant messaging": "Άμεσες ανταλλαγές",
   "Insufficient Storage": "Ανεπαρκής αποθηκευτικός χώρος",
   "Internal Server Error": "Εσωτερικό Σφάλμα Διακομιστή",
   "Introduction": "Εισαγωγή",
@@ -835,6 +838,7 @@
   "Pet category": "Κατηγορία κατοικίδιων ζώων",
   "Pets": "Κατοικίδια",
   "Phone": "Τηλέφωνο",
+  "Phone number": "Αριθμός τηλεφώνου",
   "Photo": "Φωτογραφία",
   "Photos": "Φωτογραφίες",
   "Played basketball": "Έπαιξε μπάσκετ",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Φέτες ζωής",
   "Small animal": "Μικρό ζώο",
   "Social": "Κοινωνικός",
+  "Social profile": "Κοινωνικό προφίλ",
   "Solve": "Λύση",
   "Some dates have a special type that we will use in the software to calculate an age.": "Ορισμένες ημερομηνίες έχουν έναν ειδικό τύπο που θα χρησιμοποιήσουμε στο λογισμικό για να υπολογίσουμε μια ηλικία.",
   "So… it works 😼": "Λοιπόν… λειτουργεί 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Αυτός ο χρήστης έχει ήδη προσκληθεί στην ομάδα.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Αυτός ο χρήστης θα είναι μέρος του λογαριασμού σας, αλλά δεν θα έχει πρόσβαση σε όλα τα θησαυροφυλάκια σε αυτόν τον λογαριασμό, εκτός εάν τους δώσετε συγκεκριμένη πρόσβαση. Αυτό το άτομο θα μπορεί επίσης να δημιουργήσει θησαυροφυλάκια.",
   "This will immediately:": "Αυτό θα κάνει αμέσως:",
+  "Threads": "Νήματα",
   "Three things that happened today": "Τρία πράγματα συνέβησαν σήμερα",
   "Thursday": "Πέμπτη",
   "Timezone": "Ζώνη ώρας",
