--- a/lang/es.json
+++ b/lang/es.json
@@ -234,6 +234,7 @@
   "Bird": "Pájaro",
   "Birthdate": "Fecha de nacimiento",
   "Birthday": "Cumpleaños",
+  "Bluesky": "Bluesky",
   "Body": "Cuerpo",
   "boss": "jefe",
   "Bought": "Compró",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Las ocasiones de regalo te permiten clasificar todos tus regalos.",
   "Gift states": "Estados de regalo",
   "Gift states let you define the various states for your gifts.": "Los estados de obsequio le permiten definir los distintos estados de sus obsequios.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Dale un nombre a esta dirección de correo electrónico.",
   "Goals": "Objetivos",
   "Go back": "Regresa",
@@ -601,6 +603,7 @@
   "in love with": "enamorado de",
   "Inspirational post": "Publicación inspiradora",
   "Instagram": "Instagram",
+  "Instant messaging": "Mensajería instantánea",
   "Insufficient Storage": "Espacio insuficiente",
   "Internal Server Error": "Error interno del servidor",
   "Introduction": "Introducción",
@@ -835,6 +838,7 @@
   "Pet category": "Categoría de mascota",
   "Pets": "Mascotas",
   "Phone": "Teléfono",
+  "Phone number": "Número de teléfono",
   "Photo": "Foto",
   "Photos": "Fotos",
   "Played basketball": "Jugó basquetbol",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Rebanadas de vida",
   "Small animal": "Animal pequeño",
   "Social": "Social",
+  "Social profile": "Perfil social",
   "Solve": "Resolver",
   "Some dates have a special type that we will use in the software to calculate an age.": "Algunas fechas tienen un tipo especial que usaremos en el software para calcular una edad.",
   "So… it works 😼": "Entonces… funciona 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Este usuario ya ha sido invitado al equipo.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Este usuario será parte de su cuenta, pero no tendrá acceso a todas las bóvedas de esta cuenta a menos que usted les dé acceso específico. Esta persona también podrá crear bóvedas.",
   "This will immediately:": "Esto inmediatamente:",
+  "Threads": "Trapos",
   "Three things that happened today": "Tres cosas que pasaron hoy",
   "Thursday": "Jueves",
   "Timezone": "Zona horaria",
