--- a/lang/he.json
+++ b/lang/he.json
@@ -234,6 +234,7 @@
   "Bird": "ציפור",
   "Birthdate": "תאריך לידה",
   "Birthday": "יום הולדת",
+  "Bluesky": "בלוזקי",
   "Body": "גוּף",
   "boss": "בּוֹס",
   "Bought": "קנה",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "אירועי מתנות מאפשרים לך לסווג את כל המתנות שלך.",
   "Gift states": "מצבי מתנה",
   "Gift states let you define the various states for your gifts.": "מצבי מתנות מאפשרים לך להגדיר את המצבים השונים עבור המתנות שלך.",
+  "GitHub": "GitHub",
   "Give this email address a name": "תן שם לכתובת האימייל הזו",
   "Goals": "מטרות",
   "Go back": "תחזור",
@@ -601,6 +603,7 @@
   "in love with": "מאוהב ב",
   "Inspirational post": "פוסט מעורר השראה",
   "Instagram": "אינסטגרם",
+  "Instant messaging": "העברת מסרים מיידית",
   "Insufficient Storage": "אין מספיק שטח אחסון",
   "Internal Server Error": "שגיאת שרת פנימית",
   "Introduction": "מבוא",
@@ -835,6 +838,7 @@
   "Pet category": "קטגוריית חיות מחמד",
   "Pets": "חיות מחמד",
   "Phone": "טלפון",
+  "Phone number": "מספר טלפון",
   "Photo": "תמונה",
   "Photos": "תמונות",
   "Played basketball": "שיחק כדורסל",
@@ -1018,6 +1022,7 @@
   "Slices of life": "פרוסות חיים",
   "Small animal": "חיה קטנה",
   "Social": "חֶברָתִי",
+  "Social profile": "פרופיל חברתי",
   "Solve": "לִפְתוֹר",
   "Some dates have a special type that we will use in the software to calculate an age.": "לחלק מהתאריכים יש סוג מיוחד בו נשתמש בתוכנה לחישוב גיל.",
   "So… it works 😼": "אז... זה עובד 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "משתמש זה כבר הוזמן לצוות.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "משתמש זה יהיה חלק מהחשבון שלך, אך לא יקבל גישה לכל הכספות בחשבון זה אלא אם תיתן גישה ספציפית אליהם. אדם זה יוכל ליצור גם כספות.",
   "This will immediately:": "זה יעשה מיד:",
+  "Threads": "חוטים",
   "Three things that happened today": "שלושה דברים שקרו היום",
   "Thursday": "יוֹם חֲמִישִׁי",
   "Timezone": "אזור זמן",
