--- a/lang/hi.json
+++ b/lang/hi.json
@@ -234,6 +234,7 @@
   "Bird": "चिड़िया",
   "Birthdate": "जन्म तिथि",
   "Birthday": "जन्मदिन",
+  "Bluesky": "नीला आकाश",
   "Body": "शरीर",
   "boss": "मालिक",
   "Bought": "खरीदा",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "उपहार के अवसर आपको अपने सभी उपहारों को वर्गीकृत करने देते हैं।",
   "Gift states": "उपहार बताता है",
   "Gift states let you define the various states for your gifts.": "उपहार स्थिति आपको अपने उपहारों के लिए विभिन्न स्थितियों को परिभाषित करने देती है।",
+  "GitHub": "GitHub",
   "Give this email address a name": "इस ईमेल पते को एक नाम दें",
   "Goals": "लक्ष्य",
   "Go back": "वापस जाओ",
@@ -601,6 +603,7 @@
   "in love with": "के साथ प्यार में",
   "Inspirational post": "प्रेरणादायक पोस्ट",
   "Instagram": "Instagram",
+  "Instant messaging": "तात्कालिक संदेशन",
   "Insufficient Storage": "अपर्याप्त संग्रहण",
   "Internal Server Error": "आंतरिक सर्वर त्रुटि",
   "Introduction": "परिचय",
@@ -835,6 +838,7 @@
   "Pet category": "पालतू वर्ग",
   "Pets": "पालतू जानवर",
   "Phone": "फ़ोन",
+  "Phone number": "फ़ोन नंबर",
   "Photo": "फोटो",
   "Photos": "तस्वीरें",
   "Played basketball": "बास्केटबॉल खेला",
@@ -1018,6 +1022,7 @@
   "Slices of life": "जीवन के टुकड़े",
   "Small animal": "छोटा जानवर",
   "Social": "सामाजिक",
+  "Social profile": "सामाजिक प्रोफ़ाइल",
   "Solve": "हल करना",
   "Some dates have a special type that we will use in the software to calculate an age.": "कुछ तिथियों का एक विशेष प्रकार होता है जिसका उपयोग हम सॉफ़्टवेयर में आयु की गणना करने के लिए करेंगे।",
   "So… it works 😼": "तो... यह काम करता है 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "इस उपयोगकर्ता को पहले ही टीम में आमंत्रित किया जा चुका है ।",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "यह उपयोगकर्ता आपके खाते का हिस्सा होगा, लेकिन उसे इस खाते के सभी वॉल्ट तक पहुंच नहीं मिलेगी, जब तक कि आप उन्हें विशिष्ट पहुंच नहीं देते। यह व्यक्ति तिजोरियाँ भी बनाने में सक्षम होगा।",
   "This will immediately:": "यह तुरंत होगा:",
+  "Threads": "धागे",
   "Three things that happened today": "तीन चीजें जो आज हुईं",
   "Thursday": "गुरुवार",
   "Timezone": "समय क्षेत्र",
