--- a/lang/it.json
+++ b/lang/it.json
@@ -234,6 +234,7 @@
   "Bird": "Uccello",
   "Birthdate": "Data di nascita",
   "Birthday": "Compleanno",
+  "Bluesky": "Bluesky",
   "Body": "Corpo",
   "boss": "capo",
   "Bought": "Comprato",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Le occasioni regalo ti consentono di classificare tutti i tuoi regali.",
   "Gift states": "Stati del dono",
   "Gift states let you define the various states for your gifts.": "Gli stati dei regali ti consentono di definire i vari stati dei tuoi regali.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Dai un nome a questo indirizzo email",
   "Goals": "Obiettivi",
   "Go back": "Torna indietro",
@@ -601,6 +603,7 @@
   "in love with": "innamorato di",
   "Inspirational post": "Post ispiratore",
   "Instagram": "Instagram",
+  "Instant messaging": "Messaggistica istantanea",
   "Insufficient Storage": "Spazio insufficiente",
   "Internal Server Error": "Errore interno al server",
   "Introduction": "introduzione",
@@ -835,6 +838,7 @@
   "Pet category": "Categoria animali domestici",
   "Pets": "Animali domestici",
   "Phone": "Telefono",
+  "Phone number": "Numero di telefono",
   "Photo": "Foto",
   "Photos": "Fotografie",
   "Played basketball": "Giocato a basket",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Spaccati di vita",
   "Small animal": "Piccolo animale",
   "Social": "Sociale",
+  "Social profile": "Profilo sociale",
   "Solve": "Risolvere",
   "Some dates have a special type that we will use in the software to calculate an age.": "Alcune date hanno un tipo speciale che utilizzeremo nel software per calcolare l’età.",
   "So… it works 😼": "Quindi... funziona 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Questo utente è stato già invitato nel team.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Questo utente farà parte del tuo account, ma non avrà accesso a tutte le casseforti in questo account a meno che tu non fornisca loro un accesso specifico. Questa persona sarà anche in grado di creare depositi.",
   "This will immediately:": "Ciò consentirà immediatamente:",
+  "Threads": "Discussioni",
   "Three things that happened today": "Tre cose accadute oggi",
   "Thursday": "Giovedì",
   "Timezone": "Fuso orario",
