--- a/lang/ja.json
+++ b/lang/ja.json
@@ -234,6 +234,7 @@
   "Bird": "鳥",
   "Birthdate": "生年月日",
   "Birthday": "誕生日",
+  "Bluesky": "ブルースキー",
   "Body": "体",
   "boss": "ボス",
   "Bought": "買った",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "ギフト機会では、すべてのギフトを分類できます。",
   "Gift states": "ギフトの状態",
   "Gift states let you define the various states for your gifts.": "ギフトの状態を使用すると、ギフトのさまざまな状態を定義できます。",
+  "GitHub": "github",
   "Give this email address a name": "このメールアドレスに名前を付けてください",
   "Goals": "目標",
   "Go back": "戻る",
@@ -601,6 +603,7 @@
   "in love with": "恋してる",
   "Inspirational post": "インスピレーションを与える投稿",
   "Instagram": "Instagram",
+  "Instant messaging": "インスタントメッセージング",
   "Insufficient Storage": "ストレージ不足",
   "Internal Server Error": "内部サーバーエラー",
   "Introduction": "導入",
@@ -835,6 +838,7 @@
   "Pet category": "ペットカテゴリー",
   "Pets": "ペット",
   "Phone": "電話",
+  "Phone number": "電話番号",
   "Photo": "写真",
   "Photos": "写真",
   "Played basketball": "バスケットボールをした",
@@ -1018,6 +1022,7 @@
   "Slices of life": "人生の断片",
   "Small animal": "小動物",
   "Social": "社交",
+  "Social profile": "ソーシャルプロファイル",
   "Solve": "解決",
   "Some dates have a special type that we will use in the software to calculate an age.": "一部の日付には、ソフトウェアで年齢を計算するために使用する特別なタイプがあります。",
   "So… it works 😼": "それで…うまくいきます 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "このユーザーは既にチームに招待されています。",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "このユーザーはあなたのアカウントの一部になりますが、特定のアクセス権を付与しない限り、このアカウント内のすべてのコンテナーにアクセスできるわけではありません。この人は Vault を作成することもできます。",
   "This will immediately:": "これにより、すぐに次のことが行われます。",
+  "Threads": "スレッド",
   "Three things that happened today": "今日あった３つのこと",
   "Thursday": "木曜日",
   "Timezone": "タイムゾーン",
