--- a/lang/ml.json
+++ b/lang/ml.json
@@ -234,6 +234,7 @@
   "Bird": "പക്ഷി",
   "Birthdate": "ജനനത്തീയതി",
   "Birthday": "ജന്മദിനം",
+  "Bluesky": "ബ്ലൂസ്കി",
   "Body": "ശരീരം",
   "boss": "മുതലാളി",
   "Bought": "വാങ്ങി",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "നിങ്ങളുടെ എല്ലാ സമ്മാനങ്ങളും തരംതിരിക്കാൻ സമ്മാന അവസരങ്ങൾ നിങ്ങളെ അനുവദിക്കുന്നു.",
   "Gift states": "സമ്മാനം സംസ്ഥാനങ്ങൾ",
   "Gift states let you define the various states for your gifts.": "നിങ്ങളുടെ സമ്മാനങ്ങൾക്കായി വിവിധ സംസ്ഥാനങ്ങൾ നിർവചിക്കാൻ ഗിഫ്റ്റ് സ്റ്റേറ്റുകൾ നിങ്ങളെ അനുവദിക്കുന്നു.",
+  "GitHub": "GitHub",
   "Give this email address a name": "ഈ ഇമെയിൽ വിലാസത്തിന് ഒരു പേര് നൽകുക",
   "Goals": "ലക്ഷ്യങ്ങൾ",
   "Go back": "മടങ്ങിപ്പോവുക",
@@ -601,6 +603,7 @@
   "in love with": "പ്രണയത്തിലാണ്",
   "Inspirational post": "പ്രചോദനാത്മകമായ പോസ്റ്റ്",
   "Instagram": "ഇൻസ്റ്റാഗ്രാം",
+  "Instant messaging": "തൽക്ഷണ സന്ദേശമയയ്ക്കൽ",
   "Insufficient Storage": "അപര്യാപ്തമായ സംഭരണം",
   "Internal Server Error": "ഇന്റേർണൽ സെർവർ പിശക്",
   "Introduction": "ആമുഖം",
@@ -835,6 +838,7 @@
   "Pet category": "വളർത്തുമൃഗങ്ങളുടെ വിഭാഗം",
   "Pets": "വളർത്തുമൃഗങ്ങൾ",
   "Phone": "ഫോൺ",
+  "Phone number": "ഫോൺ നമ്പർ",
   "Photo": "ഫോട്ടോ",
   "Photos": "ഫോട്ടോകൾ",
   "Played basketball": "ബാസ്കറ്റ്ബോൾ കളിച്ചു",
@@ -1018,6 +1022,7 @@
   "Slices of life": "ജീവിതത്തിന്റെ കഷ്ണങ്ങൾ",
   "Small animal": "ചെറിയ മൃഗം",
   "Social": "സാമൂഹിക",
+  "Social profile": "സാമൂഹിക പ്രൊഫൈൽ",
   "Solve": "പരിഹരിക്കുക",
   "Some dates have a special type that we will use in the software to calculate an age.": "ചില തീയതികൾക്ക് ഒരു പ്രത്യേക തരം ഉണ്ട്, അത് ഒരു പ്രായം കണക്കാക്കാൻ ഞങ്ങൾ സോഫ്റ്റ്വെയറിൽ ഉപയോഗിക്കും.",
   "So… it works 😼": "അങ്ങനെ... അത് പ്രവർത്തിക്കുന്നു 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "ഈ ഉപയോക്താവിനെ ഇതിനകം ടീമിലേക്ക് ക്ഷണിച്ചു.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "ഈ ഉപയോക്താവ് നിങ്ങളുടെ അക്കൗണ്ടിന്റെ ഭാഗമായിരിക്കും, എന്നാൽ നിങ്ങൾ അവർക്ക് പ്രത്യേക ആക്‌സസ് നൽകിയില്ലെങ്കിൽ ഈ അക്കൗണ്ടിലെ എല്ലാ നിലവറകളിലേക്കും ആക്‌സസ് ലഭിക്കില്ല. ഈ വ്യക്തിക്ക് നിലവറകൾ സൃഷ്ടിക്കാനും കഴിയും.",
   "This will immediately:": "ഇത് ഉടനടി ചെയ്യും:",
+  "Threads": "ത്രെഡുകൾ",
   "Three things that happened today": "ഇന്ന് നടന്ന മൂന്ന് കാര്യങ്ങൾ",
   "Thursday": "വ്യാഴാഴ്ച",
   "Timezone": "സമയ മേഖല",
