--- a/lang/nl.json
+++ b/lang/nl.json
@@ -234,6 +234,7 @@
   "Bird": "Vogel",
   "Birthdate": "Geboortedatum",
   "Birthday": "Verjaardag",
+  "Bluesky": "Blusky",
   "Body": "Lichaam",
   "boss": "baas",
   "Bought": "Gekocht",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Met cadeaugelegenheden kunt u al uw geschenken categoriseren.",
   "Gift states": "Geschenkstaten",
   "Gift states let you define the various states for your gifts.": "Met geschenkstatussen kunt u de verschillende statussen voor uw geschenken definiëren.",
+  "GitHub": "Gitub",
   "Give this email address a name": "Geef dit e-mailadres een naam",
   "Goals": "Doelen",
   "Go back": "Ga terug",
@@ -601,6 +603,7 @@
   "in love with": "verliefd op",
   "Inspirational post": "Inspirerende post",
   "Instagram": "Instagram",
+  "Instant messaging": "Instant messaging",
   "Insufficient Storage": "Onvoldoende opslag",
   "Internal Server Error": "Interne serverfout",
   "Introduction": "Invoering",
@@ -835,6 +838,7 @@
   "Pet category": "Categorie huisdieren",
   "Pets": "Huisdieren",
   "Phone": "Telefoon",
+  "Phone number": "Telefoonnummer",
   "Photo": "Foto",
   "Photos": "Foto’s",
   "Played basketball": "Speelde basketbal",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Plakjes leven",
   "Small animal": "Klein dier",
   "Social": "Sociaal",
+  "Social profile": "Sociaal profiel",
   "Solve": "Oplossen",
   "Some dates have a special type that we will use in the software to calculate an age.": "Sommige datums hebben een speciaal type dat we in de software zullen gebruiken om een leeftijd te berekenen.",
   "So… it works 😼": "Dus... het werkt 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Deze gebruiker is al uitgenodigd voor het team.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Deze gebruiker maakt deel uit van uw account, maar krijgt geen toegang tot alle kluizen in dit account, tenzij u er specifieke toegang toe geeft. Deze persoon kan ook kluizen maken.",
   "This will immediately:": "Dit zal onmiddellijk:",
+  "Threads": "Draden",
   "Three things that happened today": "Drie dingen die vandaag zijn gebeurd",
   "Thursday": "Donderdag",
   "Timezone": "Tijdzone",
