--- a/lang/pa.json
+++ b/lang/pa.json
@@ -234,6 +234,7 @@
   "Bird": "ਪੰਛੀ",
   "Birthdate": "ਜਨਮ ਮਿਤੀ",
   "Birthday": "ਜਨਮਦਿਨ",
+  "Bluesky": "ਬਲੂਸਕੀ",
   "Body": "ਸਰੀਰ",
   "boss": "ਬੌਸ",
   "Bought": "ਖਰੀਦਿਆ",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "ਤੋਹਫ਼ੇ ਦੇ ਮੌਕੇ ਤੁਹਾਨੂੰ ਤੁਹਾਡੇ ਸਾਰੇ ਤੋਹਫ਼ਿਆਂ ਨੂੰ ਸ਼੍ਰੇਣੀਬੱਧ ਕਰਨ ਦਿੰਦੇ ਹਨ।",
   "Gift states": "ਤੋਹਫ਼ੇ ਦੇ ਰਾਜ",
   "Gift states let you define the various states for your gifts.": "ਤੋਹਫ਼ੇ ਦੇ ਰਾਜ ਤੁਹਾਨੂੰ ਤੁਹਾਡੇ ਤੋਹਫ਼ਿਆਂ ਲਈ ਵੱਖ-ਵੱਖ ਰਾਜਾਂ ਨੂੰ ਪਰਿਭਾਸ਼ਿਤ ਕਰਨ ਦਿੰਦੇ ਹਨ।",
+  "GitHub": "GitHub",
   "Give this email address a name": "ਇਸ ਈਮੇਲ ਪਤੇ ਨੂੰ ਇੱਕ ਨਾਮ ਦਿਓ",
   "Goals": "ਟੀਚੇ",
   "Go back": "ਵਾਪਸ ਜਾਓ",
@@ -601,6 +603,7 @@
   "in love with": "ਨਾਲ ਪਿਆਰ ਵਿੱਚ",
   "Inspirational post": "ਪ੍ਰੇਰਣਾਦਾਇਕ ਪੋਸਟ",
   "Instagram": "ਇੰਸਟਾਗ੍ਰਾਮ",
+  "Instant messaging": "ਤਤਕਾਲ ਮੈਸੇਜਿੰਗ",
   "Insufficient Storage": "ਨਾਕਾਫ਼ੀ ਸਟੋਰੇਜ",
   "Internal Server Error": "ਅੰਦਰੂਨੀ ਸਰਵਰ ਗੜਬੜ",
   "Introduction": "ਜਾਣ-ਪਛਾਣ",
@@ -835,6 +838,7 @@
   "Pet category": "ਪਾਲਤੂ ਸ਼੍ਰੇਣੀ",
   "Pets": "ਪਾਲਤੂ",
   "Phone": "ਫ਼ੋਨ",
+  "Phone number": "ਫੋਨ ਨੰਬਰ",
   "Photo": "ਤਸਵੀਰ",
   "Photos": "ਫੋਟੋਆਂ",
   "Played basketball": "ਬਾਸਕਟਬਾਲ ਖੇਡਿਆ",
@@ -1018,6 +1022,7 @@
   "Slices of life": "ਜੀਵਨ ਦੇ ਟੁਕੜੇ",
   "Small animal": "ਛੋਟਾ ਜਾਨਵਰ",
   "Social": "ਸਮਾਜਿਕ",
+  "Social profile": "ਸੋਸ਼ਲ ਪ੍ਰੋਫਾਈਲ",
   "Solve": "ਹੱਲ",
   "Some dates have a special type that we will use in the software to calculate an age.": "ਕੁਝ ਤਾਰੀਖਾਂ ਦੀ ਇੱਕ ਵਿਸ਼ੇਸ਼ ਕਿਸਮ ਹੁੰਦੀ ਹੈ ਜਿਸਦੀ ਵਰਤੋਂ ਅਸੀਂ ਇੱਕ ਉਮਰ ਦੀ ਗਣਨਾ ਕਰਨ ਲਈ ਸੌਫਟਵੇਅਰ ਵਿੱਚ ਕਰਾਂਗੇ।",
   "So… it works 😼": "ਇਸ ਲਈ... ਇਹ ਕੰਮ ਕਰਦਾ ਹੈ 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "ਇਸ ਉਪਭੋਗਤਾ ਨੂੰ ਪਹਿਲਾਂ ਹੀ ਟੀਮ ਵਿੱਚ ਸੱਦਾ ਦਿੱਤਾ ਗਿਆ ਹੈ।",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "ਇਹ ਉਪਭੋਗਤਾ ਤੁਹਾਡੇ ਖਾਤੇ ਦਾ ਹਿੱਸਾ ਹੋਵੇਗਾ, ਪਰ ਜਦੋਂ ਤੱਕ ਤੁਸੀਂ ਉਹਨਾਂ ਨੂੰ ਖਾਸ ਪਹੁੰਚ ਨਹੀਂ ਦਿੰਦੇ ਹੋ, ਉਦੋਂ ਤੱਕ ਇਸ ਖਾਤੇ ਦੇ ਸਾਰੇ ਵਾਲਟ ਤੱਕ ਪਹੁੰਚ ਪ੍ਰਾਪਤ ਨਹੀਂ ਕਰੇਗਾ। ਇਹ ਵਿਅਕਤੀ ਵਾਲਟ ਵੀ ਬਣਾਉਣ ਦੇ ਯੋਗ ਹੋਵੇਗਾ।",
   "This will immediately:": "ਇਹ ਤੁਰੰਤ ਕਰੇਗਾ:",
+  "Threads": "ਥਰਿੱਡਜ਼",
   "Three things that happened today": "ਤਿੰਨ ਗੱਲਾਂ ਜੋ ਅੱਜ ਹੋਈਆਂ",
   "Thursday": "ਵੀਰਵਾਰ",
   "Timezone": "ਸਮਾਂ ਖੇਤਰ",
