--- a/lang/pl.json
+++ b/lang/pl.json
@@ -234,6 +234,7 @@
   "Bird": "Ptak",
   "Birthdate": "Data urodzenia",
   "Birthday": "Urodziny",
+  "Bluesky": "Bluesy",
   "Body": "Ciało",
   "boss": "szef",
   "Bought": "Kupił",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Okazje na prezenty pozwalają kategoryzować wszystkie prezenty.",
   "Gift states": "Stany prezentów",
   "Gift states let you define the various states for your gifts.": "Stany prezentów umożliwiają zdefiniowanie różnych stanów prezentów.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Nadaj temu adresowi e-mail nazwę",
   "Goals": "Cele",
   "Go back": "Wróć",
@@ -601,6 +603,7 @@
   "in love with": "zakochany w",
   "Inspirational post": "Inspirujący wpis",
   "Instagram": "Instagram",
+  "Instant messaging": "Wiadomości błyskawiczne",
   "Insufficient Storage": "Niewystarczające miejsce do przechowywania",
   "Internal Server Error": "Wewnętrzny błąd serwera",
   "Introduction": "Wprowadzenie",
@@ -835,6 +838,7 @@
   "Pet category": "Kategoria zwierzaka",
   "Pets": "Zwierzęta",
   "Phone": "Telefon",
+  "Phone number": "Numer telefonu",
   "Photo": "Zdjęcie",
   "Photos": "Zdjęcia",
   "Played basketball": "Grał w koszykówkę",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Kawałki życia",
   "Small animal": "Małe zwierzę",
   "Social": "Społeczny",
+  "Social profile": "Profil społeczny",
   "Solve": "Rozwiąż",
   "Some dates have a special type that we will use in the software to calculate an age.": "Niektóre daty mają specjalny typ, którego będziemy używać w oprogramowaniu do obliczania wieku.",
   "So… it works 😼": "Zatem… to działa 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Ten użytkownik został już zaproszony do zespołu.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Ten użytkownik będzie częścią Twojego konta, ale nie uzyska dostępu do wszystkich skarbców na tym koncie, chyba że zapewnisz im określony dostęp. Osoba ta będzie mogła również tworzyć skarbce.",
   "This will immediately:": "Spowoduje to natychmiastowe:",
+  "Threads": "Wątki",
   "Three things that happened today": "Trzy rzeczy, które wydarzyły się dzisiaj",
   "Thursday": "Czwartek",
   "Timezone": "Strefa czasowa",
