--- a/lang/pt.json
+++ b/lang/pt.json
@@ -234,6 +234,7 @@
   "Bird": "Pássaro",
   "Birthdate": "Data de nascimento",
   "Birthday": "Aniversário",
+  "Bluesky": "Bluesky",
   "Body": "Corpo",
   "boss": "chefe",
   "Bought": "Comprado",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "As ocasiões para presentes permitem categorizar todos os seus presentes.",
   "Gift states": "Estados de presente",
   "Gift states let you define the various states for your gifts.": "Os estados de presentes permitem definir os vários estados de seus presentes.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Dê um nome a este endereço de e-mail",
   "Goals": "Metas",
   "Go back": "Volte",
@@ -601,6 +603,7 @@
   "in love with": "apaixonado por",
   "Inspirational post": "Postagem inspiradora",
   "Instagram": "Instagram",
+  "Instant messaging": "Mensagens instantâneas",
   "Insufficient Storage": "Armazenamento Insuficiente",
   "Internal Server Error": "Erro do Servidor Interno",
   "Introduction": "Introdução",
@@ -835,6 +838,7 @@
   "Pet category": "Categoria de animal de estimação",
   "Pets": "Animais de estimação",
   "Phone": "Telefone",
+  "Phone number": "Número de telefone",
   "Photo": "Foto",
   "Photos": "Fotos",
   "Played basketball": "Joguei basquete",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Fatias de vida",
   "Small animal": "Animal pequeno",
   "Social": "Social",
+  "Social profile": "Perfil social",
   "Solve": "Resolver",
   "Some dates have a special type that we will use in the software to calculate an age.": "Algumas datas possuem um tipo especial que usaremos no software para calcular a idade.",
   "So… it works 😼": "Então… funciona 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Este usuário já foi convidado para a equipe.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Este usuário fará parte da sua conta, mas não terá acesso a todos os cofres desta conta, a menos que você conceda acesso específico a eles. Essa pessoa também poderá criar cofres.",
   "This will immediately:": "Isso irá imediatamente:",
+  "Threads": "Tópicos",
   "Three things that happened today": "Três coisas que aconteceram hoje",
   "Thursday": "Quinta-feira",
   "Timezone": "Fuso horário",
