--- a/lang/ro.json
+++ b/lang/ro.json
@@ -234,6 +234,7 @@
   "Bird": "Pasăre",
   "Birthdate": "Data de naștere",
   "Birthday": "Zi de nastere",
+  "Bluesky": "Bluesky",
   "Body": "Corp",
   "boss": "sef",
   "Bought": "Cumparat",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Ocaziile cadou vă permit să vă clasificați toate cadourile.",
   "Gift states": "Stări de cadou",
   "Gift states let you define the various states for your gifts.": "Stările de cadouri vă permit să definiți diferitele stări pentru cadourile dvs.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Dați un nume acestei adrese de e-mail",
   "Goals": "Goluri",
   "Go back": "Întoarce-te",
@@ -601,6 +603,7 @@
   "in love with": "în dragoste cu",
   "Inspirational post": "Postare de inspirație",
   "Instagram": "Instagram",
+  "Instant messaging": "Mesaje instantanee",
   "Insufficient Storage": "Spațiu de stocare insuficient",
   "Internal Server Error": "Internal Server Error",
   "Introduction": "Introducere",
@@ -835,6 +838,7 @@
   "Pet category": "Categoria animalelor de companie",
   "Pets": "Animale de companie",
   "Phone": "Telefon",
+  "Phone number": "Număr de telefon",
   "Photo": "Fotografie",
   "Photos": "Fotografii",
   "Played basketball": "A jucat baschet",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Bucuri de viață",
   "Small animal": "Animal mic",
   "Social": "Social",
+  "Social profile": "Profil social",
   "Solve": "Rezolvă",
   "Some dates have a special type that we will use in the software to calculate an age.": "Unele date au un tip special pe care îl vom folosi în software pentru a calcula o vârstă.",
   "So… it works 😼": "Deci... funcționează 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Acest utilizator a fost deja invitat în echipă.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Acest utilizator va face parte din contul dvs., dar nu va avea acces la toate seifurile din acest cont decât dacă le acordați acces specific. Această persoană va putea crea și seifuri.",
   "This will immediately:": "Acest lucru va:",
+  "Threads": "Fire",
   "Three things that happened today": "Trei lucruri care s-au întâmplat astăzi",
   "Thursday": "joi",
   "Timezone": "Fus orar",
