--- a/lang/ru.json
+++ b/lang/ru.json
@@ -234,6 +234,7 @@
   "Bird": "Птица",
   "Birthdate": "Дата рождения",
   "Birthday": "День рождения",
+  "Bluesky": "Блюзский",
   "Body": "Тело",
   "boss": "босс",
   "Bought": "Купил",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Подарочные поводы позволяют классифицировать все ваши подарки.",
   "Gift states": "Подарочные состояния",
   "Gift states let you define the various states for your gifts.": "Состояния подарков позволяют вам определять различные состояния ваших подарков.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Дайте этому адресу электронной почты имя",
   "Goals": "Цели",
   "Go back": "Возвращаться",
@@ -601,6 +603,7 @@
   "in love with": "влюблен в",
   "Inspirational post": "Вдохновляющий пост",
   "Instagram": "Instagram",
+  "Instant messaging": "Мгновенный обмен сообщениями",
   "Insufficient Storage": "Переполнение хранилища",
   "Internal Server Error": "Внутренняя ошибка",
   "Introduction": "Введение",
@@ -835,6 +838,7 @@
   "Pet category": "Категория домашнего животного",
   "Pets": "Домашние питомцы",
   "Phone": "Телефон",
+  "Phone number": "Номер телефона",
   "Photo": "Фото",
   "Photos": "Фото",
   "Played basketball": "Играл в баскетбол",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Кусочки жизни",
   "Small animal": "Маленькое животное",
   "Social": "Социальное",
+  "Social profile": "Социальный профиль",
   "Solve": "Решить",
   "Some dates have a special type that we will use in the software to calculate an age.": "Некоторые даты имеют специальный тип, который мы будем использовать в программе для расчета возраста.",
   "So… it works 😼": "Итак… это работает 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Этот пользователь уже был приглашён в команду.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Этот пользователь будет частью вашей учетной записи, но не получит доступа ко всем хранилищам в этой учетной записи, если вы не предоставите к ним специальный доступ. Этот человек также сможет создавать хранилища.",
   "This will immediately:": "Это немедленно:",
+  "Threads": "Нить",
   "Three things that happened today": "Три вещи, которые произошли сегодня",
   "Thursday": "Четверг",
   "Timezone": "Часовой пояс",
