--- a/lang/sv.json
+++ b/lang/sv.json
@@ -234,6 +234,7 @@
   "Bird": "Fågel",
   "Birthdate": "Födelsedatum",
   "Birthday": "Födelsedag",
+  "Bluesky": "Bluessky",
   "Body": "Kropp",
   "boss": "chef",
   "Bought": "Köpt",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Presenttillfällen låter dig kategorisera alla dina gåvor.",
   "Gift states": "Gåva anger",
   "Gift states let you define the various states for your gifts.": "Gåvotillstånd låter dig definiera de olika tillstånden för dina gåvor.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Ge den här e-postadressen ett namn",
   "Goals": "Mål",
   "Go back": "Gå tillbaka",
@@ -601,6 +603,7 @@
   "in love with": "förälskad i",
   "Inspirational post": "Inspirerande inlägg",
   "Instagram": "Instagram",
+  "Instant messaging": "Snabbmeddelanden",
   "Insufficient Storage": "Otillräckligt förvaringsutrymme",
   "Internal Server Error": "internt serverfel",
   "Introduction": "Introduktion",
@@ -835,6 +838,7 @@
   "Pet category": "Kategori för husdjur",
   "Pets": "Husdjur",
   "Phone": "Telefon",
+  "Phone number": "Telefonnummer",
   "Photo": "Foto",
   "Photos": "Foton",
   "Played basketball": "Spelade basket",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Skivor av livet",
   "Small animal": "Litet djur",
   "Social": "Social",
+  "Social profile": "Social profil",
   "Solve": "Lösa",
   "Some dates have a special type that we will use in the software to calculate an age.": "Vissa datum har en speciell typ som vi kommer att använda i programvaran för att beräkna en ålder.",
   "So… it works 😼": "Så... det fungerar 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Den här användaren har redan blivit inbjuden till laget.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Den här användaren kommer att vara en del av ditt konto, men kommer inte att få tillgång till alla valven i det här kontot om du inte ger specifik åtkomst till dem. Den här personen kommer också att kunna skapa valv.",
   "This will immediately:": "Detta kommer omedelbart:",
+  "Threads": "Trådar",
   "Three things that happened today": "Tre saker som hände idag",
   "Thursday": "torsdag",
   "Timezone": "Tidszon",
