--- a/lang/tr.json
+++ b/lang/tr.json
@@ -234,6 +234,7 @@
   "Bird": "Kuş",
   "Birthdate": "Doğum günü",
   "Birthday": "Doğum günü",
+  "Bluesky": "Bluesky",
   "Body": "Vücut",
   "boss": "patron",
   "Bought": "Satın alınmış",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Hediye etkinlikleri, tüm hediyelerinizi kategorilere ayırmanıza olanak tanır.",
   "Gift states": "Hediye durumları",
   "Gift states let you define the various states for your gifts.": "Hediye durumları, hediyeleriniz için çeşitli durumları tanımlamanıza olanak tanır.",
+  "GitHub": "Gitithub",
   "Give this email address a name": "Bu e-posta adresine bir ad verin",
   "Goals": "Hedefler",
   "Go back": "Geri gitmek",
@@ -601,6 +603,7 @@
   "in love with": "birine aşık olmak",
   "Inspirational post": "İlham verici yazı",
   "Instagram": "Instagram",
+  "Instant messaging": "Anlık mesajlaşma",
   "Insufficient Storage": "Yetersiz depolama",
   "Internal Server Error": "İç Sunucu Hatası",
   "Introduction": "giriiş",
@@ -835,6 +838,7 @@
   "Pet category": "Evcil hayvan kategorisi",
   "Pets": "Evcil Hayvanlar",
   "Phone": "Telefon",
+  "Phone number": "Telefon numarası",
   "Photo": "Resim",
   "Photos": "Fotoğraflar",
   "Played basketball": "Basketbol oynadım",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Hayatın dilimleri",
   "Small animal": "Küçük hayvan",
   "Social": "Sosyal",
+  "Social profile": "Sosyal profil",
   "Solve": "Çözmek",
   "Some dates have a special type that we will use in the software to calculate an age.": "Bazı tarihlerin yazılımda yaş hesaplamak için kullanacağımız özel bir türü vardır.",
   "So… it works 😼": "Yani… işe yarıyor 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Bu kullanıcı zaten ekibe davet edildi.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Bu kullanıcı hesabınızın bir parçası olacak ancak siz onlara özel erişim izni vermediğiniz sürece bu hesaptaki tüm kasalara erişim sağlayamayacaktır. Bu kişi aynı zamanda kasalar da oluşturabilecek.",
   "This will immediately:": "Bu hemen:",
+  "Threads": "İplikler",
   "Three things that happened today": "Bugün yaşanan üç şey",
   "Thursday": "Perşembe",
   "Timezone": "Saat dilimi",
