--- a/lang/vi.json
+++ b/lang/vi.json
@@ -234,6 +234,7 @@
   "Bird": "Chim",
   "Birthdate": "Ngày sinh",
   "Birthday": "Sinh nhật",
+  "Bluesky": "Bluesky",
   "Body": "Thân hình",
   "boss": "ông chủ",
   "Bought": "Mua",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Các dịp tặng quà cho phép bạn phân loại tất cả quà tặng của mình.",
   "Gift states": "Trạng thái quà tặng",
   "Gift states let you define the various states for your gifts.": "Trạng thái quà tặng cho phép bạn xác định các trạng thái khác nhau cho quà tặng của mình.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Đặt tên cho địa chỉ email này",
   "Goals": "Bàn thắng",
   "Go back": "Quay lại",
@@ -601,6 +603,7 @@
   "in love with": "yêu",
   "Inspirational post": "bài đăng đầy cảm hứng",
   "Instagram": "Instagram",
+  "Instant messaging": "Tin nhắn tức thời",
   "Insufficient Storage": "Không Đủ Bộ Nhớ",
   "Internal Server Error": "Lỗi Từ Máy Chủ Nội Bộ",
   "Introduction": "Giới thiệu",
@@ -835,6 +838,7 @@
   "Pet category": "Danh mục thú cưng",
   "Pets": "Vật nuôi",
   "Phone": "Điện thoại",
+  "Phone number": "Số điện thoại",
   "Photo": "Ảnh",
   "Photos": "Ảnh",
   "Played basketball": "Chơi bóng rổ",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Những lát cắt cuộc sống",
   "Small animal": "Con thú nhỏ",
   "Social": "Xã hội",
+  "Social profile": "Hồ sơ xã hội",
   "Solve": "Gỡ rối",
   "Some dates have a special type that we will use in the software to calculate an age.": "Một số ngày có một loại đặc biệt mà chúng tôi sẽ sử dụng trong phần mềm để tính tuổi.",
   "So… it works 😼": "Vì vậy… nó hoạt động 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Người dùng này đã được mời vào nhóm.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Người dùng này sẽ là một phần trong tài khoản của bạn nhưng sẽ không có quyền truy cập vào tất cả các kho tiền trong tài khoản này trừ khi bạn cấp quyền truy cập cụ thể cho họ. Người này cũng có thể tạo vault.",
   "This will immediately:": "Điều này sẽ ngay lập tức:",
+  "Threads": "Chủ đề",
   "Three things that happened today": "Ba điều đã xảy ra ngày hôm nay",
   "Thursday": "Thứ năm",
   "Timezone": "Múi giờ",
