--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -234,6 +234,7 @@
   "Bird": "鸟",
   "Birthdate": "出生日期",
   "Birthday": "生日",
+  "Bluesky": "布鲁斯基",
   "Body": "身体",
   "boss": "老板",
   "Bought": "买",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "送礼场合可让您对所有礼物进行分类。",
   "Gift states": "礼物状态",
   "Gift states let you define the various states for your gifts.": "礼物状态允许您定义礼物的各种状态。",
+  "GitHub": "github",
   "Give this email address a name": "为该电子邮件地址命名",
   "Goals": "目标",
   "Go back": "回去",
@@ -601,6 +603,7 @@
   "in love with": "与...恋爱",
   "Inspirational post": "励志帖子",
   "Instagram": "Instagram",
+  "Instant messaging": "即时消息",
   "Insufficient Storage": "存储空间不足",
   "Internal Server Error": "内部服务器错误",
   "Introduction": "介绍",
@@ -835,6 +838,7 @@
   "Pet category": "宠物类",
   "Pets": "宠物",
   "Phone": "电话",
+  "Phone number": "电话号码",
   "Photo": "照片",
   "Photos": "相片",
   "Played basketball": "打过篮球",
@@ -1018,6 +1022,7 @@
   "Slices of life": "生活片段",
   "Small animal": "小动物",
   "Social": "社会的",
+  "Social profile": "社会形象",
   "Solve": "解决",
   "Some dates have a special type that we will use in the software to calculate an age.": "有些日期有特殊类型，我们将在软件中使用它来计算年龄。",
   "So… it works 😼": "所以......它有效😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "该用户已经被邀请加入团队。",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "该用户将成为您帐户的一部分，但无法访问该帐户中的所有保管库，除非您授予他们特定的访问权限。此人也将能够创建保管库。",
   "This will immediately:": "这将立即：",
+  "Threads": "线程",
   "Three things that happened today": "今天发生的三件事",
   "Thursday": "周四",
   "Timezone": "时区",
