--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -234,6 +234,7 @@
   "Bird": "鳥",
   "Birthdate": "出生日期",
   "Birthday": "生日",
+  "Bluesky": "布魯斯基",
   "Body": "身體",
   "boss": "老闆",
   "Bought": "買",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "送禮場合可讓您將所有禮物分類。",
   "Gift states": "禮物狀態",
   "Gift states let you define the various states for your gifts.": "禮物狀態可讓您定義禮物的各種狀態。",
+  "GitHub": "github",
   "Give this email address a name": "為該電子郵件地址命名",
   "Goals": "目標",
   "Go back": "回去",
@@ -601,6 +603,7 @@
   "in love with": "與...戀愛",
   "Inspirational post": "勵志貼文",
   "Instagram": "Instagram",
+  "Instant messaging": "即時消息",
   "Insufficient Storage": "存儲空間不足",
   "Internal Server Error": "內部服務器錯誤",
   "Introduction": "介紹",
@@ -835,6 +838,7 @@
   "Pet category": "寵物類",
   "Pets": "寵物",
   "Phone": "電話",
+  "Phone number": "電話號碼",
   "Photo": "照片",
   "Photos": "相片",
   "Played basketball": "打過籃球",
@@ -1018,6 +1022,7 @@
   "Slices of life": "生活片段",
   "Small animal": "小動物",
   "Social": "社會的",
+  "Social profile": "社會形象",
   "Solve": "解決",
   "Some dates have a special type that we will use in the software to calculate an age.": "有些日期有特殊類型，我們將在軟體中使用它來計算年齡。",
   "So… it works 😼": "所以......它有效😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "使用者已經被邀請加入團隊。",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "該使用者將成為您帳戶的一部分，但無法存取該帳戶中的所有保管庫，除非您授予他們特定的存取權限。此人也將能夠建立保管庫。",
   "This will immediately:": "這將立即：",
+  "Threads": "線程",
   "Three things that happened today": "今天發生的三件事",
   "Thursday": "週四",
   "Timezone": "時區",
