--- a/lang/ar.json
+++ b/lang/ar.json
@@ -234,6 +234,7 @@
   "Bird": "طائر",
   "Birthdate": "تاريخ الميلاد",
   "Birthday": "عيد ميلاد",
+  "Bluesky": "بلوزكي",
   "Body": "جسم",
   "boss": "رئيس",
   "Bought": "مُشترى",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "تتيح لك مناسبات الهدايا تصنيف جميع هداياك.",
   "Gift states": "دول الهدية",
   "Gift states let you define the various states for your gifts.": "تتيح لك حالات الهدايا تحديد الحالات المختلفة لهداياك.",
+  "GitHub": "جيثب",
   "Give this email address a name": "قم بتسمية عنوان البريد الإلكتروني هذا",
   "Goals": "الأهداف",
   "Go back": "عُد",
@@ -601,6 +603,7 @@
   "in love with": "في حب",
   "Inspirational post": "وظيفة ملهمة",
   "Instagram": "Instagram",
+  "Instant messaging": "المراسلة الفورية",
   "Insufficient Storage": "مساحة تخزين غير كافية",
   "Internal Server Error": "خطأ داخلي في الخادم",
   "Introduction": "مقدمة",
@@ -835,6 +838,7 @@
   "Pet category": "فئة الحيوانات الأليفة",
   "Pets": "حيوانات أليفة",
   "Phone": "هاتف",
+  "Phone number": "رقم التليفون",
   "Photo": "صورة",
   "Photos": "الصور",
   "Played basketball": "لعبت كرة السلة",
@@ -1018,6 +1022,7 @@
   "Slices of life": "شرائح من الحياة",
   "Small animal": "الحيوانات الصغيرة",
   "Social": "اجتماعي",
+  "Social profile": "الملف الاجتماعي",
   "Solve": "حل",
   "Some dates have a special type that we will use in the software to calculate an age.": "بعض التواريخ لها نوع خاص سنستخدمه في البرنامج لحساب العمر.",
   "So… it works 😼": "إذن... إنه يعمل 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "تمت دعوة هذا المستخدم بالفعل إلى الفريق.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "سيكون هذا المستخدم جزءًا من حسابك، لكنه لن يتمكن من الوصول إلى جميع الخزائن الموجودة في هذا الحساب إلا إذا منحت حق الوصول المحدد إليها. سيكون هذا الشخص قادرًا على إنشاء خزائن أيضًا.",
   "This will immediately:": "وهذا على الفور:",
+  "Threads": "المواضيع",
   "Three things that happened today": "ثلاثة أشياء حدثت اليوم",
   "Thursday": "يوم الخميس",
   "Timezone": "وحدة زمنية",
