--- a/lang/da.json
+++ b/lang/da.json
@@ -234,6 +234,7 @@
   "Bird": "Fugl",
   "Birthdate": "Fødselsdato",
   "Birthday": "Fødselsdag",
+  "Bluesky": "Bluesky",
   "Body": "Legeme",
   "boss": "chef",
   "Bought": "Købt",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Gavebegivenheder giver dig mulighed for at kategorisere alle dine gaver.",
   "Gift states": "Gave angiver",
   "Gift states let you define the various states for your gifts.": "Gavetilstande lader dig definere de forskellige tilstande for dine gaver.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Giv denne e-mailadresse et navn",
   "Goals": "Mål",
   "Go back": "Gå tilbage",
@@ -601,6 +603,7 @@
   "in love with": "Forelsket i",
   "Inspirational post": "Inspirerende indlæg",
   "Instagram": "Instagram",
+  "Instant messaging": "Instant messaging",
   "Insufficient Storage": "Utilstrækkelig opbevaring",
   "Internal Server Error": "Intern serverfejl",
   "Introduction": "Introduktion",
@@ -835,6 +838,7 @@
   "Pet category": "Kategori af kæledyr",
   "Pets": "Kæledyr",
   "Phone": "telefon",
+  "Phone number": "Telefonnummer",
   "Photo": "Foto",
   "Photos": "Fotos",
   "Played basketball": "Spillede basketball",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Skiver af liv",
   "Small animal": "Lille dyr",
   "Social": "Social",
+  "Social profile": "Social profil",
   "Solve": "Løse",
   "Some dates have a special type that we will use in the software to calculate an age.": "Nogle datoer har en speciel type, som vi vil bruge i softwaren til at beregne en alder.",
   "So… it works 😼": "Så... det virker 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Denne bruger er allerede blevet inviteret til holdet.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Denne bruger vil være en del af din konto, men vil ikke få adgang til alle boksene på denne konto, medmindre du giver specifik adgang til dem. Denne person vil også være i stand til at oprette hvælvinger.",
   "This will immediately:": "Dette vil straks:",
+  "Threads": "Tråde",
   "Three things that happened today": "Tre ting der skete i dag",
   "Thursday": "torsdag",
   "Timezone": "Tidszone",
