--- a/lang/de.json
+++ b/lang/de.json
@@ -234,6 +234,7 @@
   "Bird": "Vogel",
   "Birthdate": "Geburtsdatum",
   "Birthday": "Geburtstag",
+  "Bluesky": "Bluesky",
   "Body": "Körper",
   "boss": "Chef",
   "Bought": "Gekauft",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Mit Geschenkanlässen können Sie alle Ihre Geschenke kategorisieren.",
   "Gift states": "Geschenkzustände",
   "Gift states let you define the various states for your gifts.": "Mit Geschenkstatus können Sie die verschiedenen Status für Ihre Geschenke definieren.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Geben Sie dieser E-Mail-Adresse einen Namen",
   "Goals": "Ziele",
   "Go back": "Geh zurück",
@@ -601,6 +603,7 @@
   "in love with": "verliebt in",
   "Inspirational post": "Inspirierender Beitrag",
   "Instagram": "Instagram",
+  "Instant messaging": "Instant Messaging",
   "Insufficient Storage": "Nicht genügend Speicherplatz",
   "Internal Server Error": "Interner Serverfehler",
   "Introduction": "Einführung",
@@ -835,6 +838,7 @@
   "Pet category": "Kategorie „Haustier“.",
   "Pets": "Haustiere",
   "Phone": "Telefon",
+  "Phone number": "Telefonnummer",
   "Photo": "Foto",
   "Photos": "Fotos",
   "Played basketball": "Spielte Basketball",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Stücke des Lebens",
   "Small animal": "Kleines Tier",
   "Social": "Sozial",
+  "Social profile": "Soziales Profil",
   "Solve": "Lösen",
   "Some dates have a special type that we will use in the software to calculate an age.": "Einige Daten haben einen speziellen Typ, den wir in der Software zur Berechnung eines Alters verwenden.",
   "So… it works 😼": "Also... es funktioniert 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Dieser Benutzer wurde bereits in dieses Team eingeladen.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Dieser Benutzer wird Teil Ihres Kontos sein, erhält jedoch keinen Zugriff auf alle Tresore in diesem Konto, es sei denn, Sie gewähren ihnen ausdrücklich Zugriff. Diese Person kann auch Tresore erstellen.",
   "This will immediately:": "Dies wird sofort:",
+  "Threads": "Themen",
   "Three things that happened today": "Drei Dinge, die heute passiert sind",
   "Thursday": "Donnerstag",
   "Timezone": "Zeitzone",
