--- a/lang/fr.json
+++ b/lang/fr.json
@@ -234,6 +234,7 @@
   "Bird": "Oiseau",
   "Birthdate": "Date de naissance",
   "Birthday": "Anniversaire",
+  "Bluesky": "Bluesky",
   "Body": "Corps",
   "boss": "chef",
   "Bought": "Acheté",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Les occasions cadeaux vous permettent de catégoriser tous vos cadeaux.",
   "Gift states": "États cadeaux",
   "Gift states let you define the various states for your gifts.": "Les états des cadeaux vous permettent de définir les différents états de vos cadeaux.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Donnez un nom à cette adresse e-mail",
   "Goals": "Objectifs",
   "Go back": "Retour",
@@ -601,6 +603,7 @@
   "in love with": "amoureux de",
   "Inspirational post": "Article inspirant",
   "Instagram": "Instagram",
+  "Instant messaging": "Messagerie instantanée",
   "Insufficient Storage": "Espace insuffisant",
   "Internal Server Error": "Erreur interne du serveur",
   "Introduction": "Introduction",
@@ -835,6 +838,7 @@
   "Pet category": "Catégorie d’animaux de compagnie",
   "Pets": "Animaux de compagnie",
   "Phone": "Téléphone",
+  "Phone number": "Numéro de téléphone",
   "Photo": "Image",
   "Photos": "Photos",
   "Played basketball": "A joué au basketball",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Tranches de vie",
   "Small animal": "Petit animal",
   "Social": "Sociale",
+  "Social profile": "Profil social",
   "Solve": "Résoudre",
   "Some dates have a special type that we will use in the software to calculate an age.": "Certaines dates ont un type spécial que nous utiliserons dans le logiciel pour calculer un âge.",
   "So… it works 😼": "Alors… ça marche 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Cet utilisateur a déjà été invité à rejoindre l’équipe.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Cet utilisateur fera partie de votre compte, mais n’aura pas accès à tous les coffres-forts de ce compte, sauf si vous leur accordez un accès spécifique. Cette personne pourra également créer des coffres-forts.",
   "This will immediately:": "Cela va immédiatement :",
+  "Threads": "Threads",
   "Three things that happened today": "Trois choses qui se sont produites aujourd’hui",
   "Thursday": "Jeudi",
   "Timezone": "Fuseau horaire",
