--- a/lang/nn.json
+++ b/lang/nn.json
@@ -234,6 +234,7 @@
   "Bird": "Fugl",
   "Birthdate": "Bursdag",
   "Birthday": "Fødselsdag",
+  "Bluesky": "Bluesky",
   "Body": "Kropp",
   "boss": "sjef",
   "Bought": "Kjøpt",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "Gaveanledninger lar deg kategorisere alle gavene dine.",
   "Gift states": "Gave opplyser",
   "Gift states let you define the various states for your gifts.": "Gavetilstander lar deg definere de forskjellige tilstandene for gavene dine.",
+  "GitHub": "GitHub",
   "Give this email address a name": "Gi denne e-postadressen et navn",
   "Goals": "Mål",
   "Go back": "Gå tilbake",
@@ -601,6 +603,7 @@
   "in love with": "forelsket i",
   "Inspirational post": "Inspirerende innlegg",
   "Instagram": "Instagram",
+  "Instant messaging": "Direktemeldinger",
   "Insufficient Storage": "Manglende lagringsplass",
   "Internal Server Error": "intern server feil",
   "Introduction": "Introduksjon",
@@ -835,6 +838,7 @@
   "Pet category": "Kjæledyrskategori",
   "Pets": "Kjæledyr",
   "Phone": "Telefon",
+  "Phone number": "Telefonnummer",
   "Photo": "Foto",
   "Photos": "Bilder",
   "Played basketball": "Spilte basketball",
@@ -1018,6 +1022,7 @@
   "Slices of life": "Skiver av livet",
   "Small animal": "Lite dyr",
   "Social": "Sosial",
+  "Social profile": "Sosial profil",
   "Solve": "Løse",
   "Some dates have a special type that we will use in the software to calculate an age.": "Noen datoer har en spesiell type som vi vil bruke i programvaren for å beregne en alder.",
   "So… it works 😼": "Så... det fungerer 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "Denne brukeren er allerede invitert til teamet.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "Denne brukeren vil være en del av kontoen din, men vil ikke få tilgang til alle hvelvene i denne kontoen med mindre du gir spesifikk tilgang til dem. Denne personen vil også kunne lage hvelv.",
   "This will immediately:": "Dette vil umiddelbart:",
+  "Threads": "Tråder",
   "Three things that happened today": "Tre ting som skjedde i dag",
   "Thursday": "Torsdag",
   "Timezone": "Tidssone",
