--- a/lang/te.json
+++ b/lang/te.json
@@ -234,6 +234,7 @@
   "Bird": "పక్షి",
   "Birthdate": "పుట్టిన తేదీ",
   "Birthday": "పుట్టినరోజు",
+  "Bluesky": "బ్లూస్కీ",
   "Body": "శరీరం",
   "boss": "బాస్",
   "Bought": "కొన్నారు",
@@ -519,6 +520,7 @@
   "Gift occasions let you categorize all your gifts.": "బహుమతి సందర్భాలు మీ అన్ని బహుమతులను వర్గీకరించడానికి మిమ్మల్ని అనుమతిస్తాయి.",
   "Gift states": "బహుమతి రాష్ట్రాలు",
   "Gift states let you define the various states for your gifts.": "మీ బహుమతుల కోసం వివిధ రాష్ట్రాలను నిర్వచించడానికి బహుమతి రాష్ట్రాలు మిమ్మల్ని అనుమతిస్తాయి.",
+  "GitHub": "గితుబ్",
   "Give this email address a name": "ఈ ఇమెయిల్ చిరునామాకు పేరు పెట్టండి",
   "Goals": "లక్ష్యాలు",
   "Go back": "వెనక్కి వెళ్ళు",
@@ -601,6 +603,7 @@
   "in love with": "ప్రేమలో",
   "Inspirational post": "స్ఫూర్తిదాయకమైన పోస్ట్",
   "Instagram": "Instagram",
+  "Instant messaging": "తక్షణ సందేశం",
   "Insufficient Storage": "తగినంత నిల్వ లేదు",
   "Internal Server Error": "అంతర్గత సర్వర్ లోపం",
   "Introduction": "పరిచయం",
@@ -835,6 +838,7 @@
   "Pet category": "పెంపుడు జంతువు వర్గం",
   "Pets": "పెంపుడు జంతువులు",
   "Phone": "ఫోన్",
+  "Phone number": "ఫోన్ నంబర్",
   "Photo": "ఫోటో",
   "Photos": "ఫోటోలు",
   "Played basketball": "బాస్కెట్‌బాల్ ఆడాడు",
@@ -1018,6 +1022,7 @@
   "Slices of life": "జీవితం యొక్క ముక్కలు",
   "Small animal": "చిన్న జంతువు",
   "Social": "సామాజిక",
+  "Social profile": "సామాజిక ప్రొఫైల్",
   "Solve": "పరిష్కరించండి",
   "Some dates have a special type that we will use in the software to calculate an age.": "కొన్ని తేదీలు ఒక ప్రత్యేక రకాన్ని కలిగి ఉంటాయి, వీటిని మేము వయస్సును లెక్కించడానికి సాఫ్ట్‌వేర్‌లో ఉపయోగిస్తాము.",
   "So… it works 😼": "కాబట్టి... ఇది పని చేస్తుంది 😼",
@@ -1265,6 +1270,7 @@
   "This user has already been invited to the team.": "ఈ వినియోగదారు ఇప్పటికే బృందానికి ఆహ్వానించబడ్డారు.",
   "This user will be part of your account, but won’t get access to all the vaults in this account unless you give specific access to them. This person will be able to create vaults as well.": "ఈ వినియోగదారు మీ ఖాతాలో భాగమవుతారు, కానీ మీరు వారికి నిర్దిష్ట యాక్సెస్ ఇస్తే తప్ప ఈ ఖాతాలోని అన్ని వాల్ట్‌లకు యాక్సెస్ పొందలేరు. ఈ వ్యక్తి వాల్ట్‌లను కూడా సృష్టించగలడు.",
   "This will immediately:": "ఇది వెంటనే చేస్తుంది:",
+  "Threads": "థ్రెడ్లు",
   "Three things that happened today": "ఈరోజు జరిగిన మూడు విషయాలు",
   "Thursday": "గురువారం",
   "Timezone": "సమయమండలం",
